Wrap timeline styles to avoid conflict in svgs

--- a/static/less/timeline.less
+++ b/static/less/timeline.less
@@ -1,21 +1,23 @@
-svg rect {
-    fill: #B0E2FF;
-    stroke: #A2B5CD;
-}
+#timeline {
+    svg rect {
+        fill: #B0E2FF;
+        stroke: #A2B5CD;
+    }
 
-svg rect:hover {
-    fill: #87CEFA;
-}
+    svg rect:hover {
+        fill: #87CEFA;
+    }
 
-svg circle.event {
-    fill: #FFB6C1;
-    stroke: #FF1493;
-}
+    svg circle.event {
+        fill: #FFB6C1;
+        stroke: #FF1493;
+    }
 
-svg line.event {
-    stroke: #FF1493;
-}
+    svg line.event {
+        stroke: #FF1493;
+    }
 
-svg text {
-    font-size: 11px;
+    svg text {
+        font-size: 11px;
+    }
 }
